# juno

./: .gitignore  CLAUDE.md  README.md  firebase.json  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
backend/: .dockerignore  Dockerfile  README.md  deploy.sh  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
backend/juno_backend.egg-info/: requires.txt
backend/src/: index.ts  main.py
backend/src/agent/: voice_agent.py
backend/src/agents/: agent_base.py  agent_registry.py  models.py  orchestrator.py  system_prompts.py
backend/src/agents/data_fetchers/: arxiv_papers.py  cricket_scores.py  hackernews.py  job_boards.py  web_search.py
backend/src/agents/implementations/: cricket_agent.py  jobs_agent.py  posts_agent.py  technews_agent.py
backend/src/config/: env.ts  settings.py
backend/src/handlers/: account.py  chat.py  connectors.py  daily_notification.py  devices.py  dietary_profile.py  engagement.py  notification-reply-handler.ts  notification_reply.py  nutrition.py  scheduled_agents.py  scheduler-handler.ts  scheduler.py  text-handler.ts
backend/src/lib/: async-json-queue.ts  logger.py  logger.ts  query_logger.py
backend/src/services/: claude-client.ts  claude_client.py  entitlement.py  fcm_token_registry.py  firebase-admin.ts  firebase.py  gemini_client.py  google_calendar_connector.py  model_provider.py  notification_rewriter.py  notification_service.py  request_auth.py  sonic-realtime-session.ts  sonic_session.py  tool-executor.ts  tool_executor.py  user_aura_extractor.py
backend/src/services/daily_notification/: __init__.py  models.py  orchestrator.py  planner_agent.py  rss_client.py  suggestion_pills_agent.py  verifier_agent.py
backend/src/services/engagement/: __init__.py  agent_registry.py  decision_engine.py  models.py  orchestrator.py  task_scheduler.py
backend/src/services/engagement/agents/: __init__.py  base_agent.py  calendar_prep.py  habit_nudge.py  nutrition_followup.py  re_engagement.py
backend/src/shared/: protocol.py  tool-definitions.ts  tools.py  voice-protocol.ts
backend/src/voice-gateway/: server.ts
backend/src/voice_gateway/: ws_handler.py
docs/: privacy-policy.md  terms-of-service.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  firebase_options.dart  main.dart
lib/core/base/: safe_change_notifier.dart
lib/core/config/: dev_targets.dart  environment.dart  firebase_config.dart  firebase_runtime.dart
lib/core/constants/: api_endpoints.dart  app_constants.dart
lib/core/errors/: app_exception.dart  error_handler.dart  network_exception.dart
lib/core/logging/: app_logger.dart  latency_tracker.dart
lib/core/network/: api_client.dart  api_response.dart  connectivity_service.dart
lib/core/router/: router.dart
lib/core/theme/: app_colors.dart  app_theme.dart  glass_card.dart
lib/core/utils/: date_utils.dart  debouncer.dart
lib/data/local/: app_database.dart  app_database.g.dart
lib/data/models/: agent.dart  chat_message_model.dart  clarification_payload.dart  connector_models.dart  dietary_profile_model.dart  memory_model.dart  nutrition_log_model.dart  reminder_model.dart  scan_result_model.dart  subscription_plan.dart  user_model.dart  voice_models.dart
lib/data/repositories/: agent_suggestion_pills_repository.dart  auth_repository.dart  chat_repository.dart  memory_repository.dart  onboarding_repository.dart  reminder_repository.dart
lib/data/services/: analytics_service.dart  backend_api_service.dart  chat_backup_service.dart  chat_session_manager.dart  feedback_service.dart  (+14 more)
lib/di/: providers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+45 files in other folders)
