[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "juno-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",

    # Validation & config
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",

    # LiveKit — voice pipeline (STT: Deepgram, LLM: Anthropic, TTS: Cartesia, VAD: Silero)
    "livekit-agents[deepgram,anthropic,cartesia,silero]>=1.0",
    "livekit-api>=0.7",

    # Anthropic Claude
    "anthropic>=0.52",

    # Firebase
    "firebase-admin>=6.7",

    # Google Calendar
    "google-api-python-client>=2.168",
    "google-auth>=2.40",
    "google-auth-httplib2>=0.2",

    # Google Gen AI SDK (Gemini via Vertex AI backend — nutrition VLM)
    "google-genai>=1.0",

    # Google Cloud Tasks (durable delayed job scheduling)
    "google-cloud-tasks>=2.16",

    # RSS feed parsing (daily notification news fallback)
    "feedparser>=6.0",

    # Async HTTP clients for scheduled agent data fetchers
    "httpx>=0.28",

    # LangSmith for LLM observability and tracing
    "langsmith>=0.2",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:langsmith.wrappers._openai_agents is deprecated",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/agent/*",
    "src/agents/*",
    "src/handlers/chat.py",
    "src/handlers/connectors.py",
    "src/handlers/devices.py",
    "src/handlers/dietary_profile.py",
    "src/handlers/engagement.py",
    "src/handlers/notification_reply.py",
    "src/handlers/nutrition.py",
    "src/handlers/scheduled_agents.py",
    "src/main.py",
    "src/services/claude_client.py",
    "src/services/engagement/*",
    "src/services/gemini_client.py",
    "src/services/google_calendar_connector.py",
    "src/services/model_provider.py",
    "src/services/request_auth.py",
    "src/services/tool_executor.py",
    "src/shared/*",
    "src/lib/query_logger.py",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
